--- a/src/app/core/header.component.html
+++ b/src/app/core/header.component.html
@@ -7,10 +7,17 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="javascript:;" class="navbar-brand">Security</a>
+      <a href="javascript:;" class="navbar-brand">SECURITY</a>
     </div>
     <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
+        <li class="dropdown" dropdown>
+          <a href="javascript:;" class="dropdown-toggle" dropdownToggle>Language <span class="caret"></span></a>
+          <ul dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="single-button">
+            <li><a href="javascript:;">中文</a></li>
+            <li><a href="javascript:;">English</a></li>
+          </ul>
+        </li>
         <li>
           <a href="javascript:;">API</a>
         </li>
@@ -20,7 +27,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="javascript:;"><i class="fa fa-user-circle" aria-hidden="true"></i> 登录</a></li>
-        <li><a href="javascript:;">注册</a></li>
+        <li><button type="button" class="btn btn-warning navbar-btn">Sign in</button></li>
       </ul>
     </nav>
   </div>
