--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -10,6 +10,24 @@
   color: $brand-info;
 }
 
+.navbar-default {
+  > .container {
+    > .collapse {
+      > .search-box {
+        > .navbar-form {
+          > .input-group {
+            .form-control { width: 500px; }
+          }
+          .btn-info {
+            padding-left: 30px;
+            padding-right: 30px;
+          }
+        }
+      }
+    }
+  }
+}
+
 .home {
   position: absolute;
   top: 40%;
