--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,14 +1,17 @@
-<div class="container home">
-  <h1 class="text-center title">威胁分析平台</h1>
-  <div class="text-center search">
-    <div class="input-group input-group-lg">
-      <input type="text" class="form-control">
-      <div class="input-group-btn">
-        <span class="btn btn-default"><i class="fa fa-upload"></i></span>
-        <span class="btn btn-default btn-info">分析</span>
+<header></header>
+<main>
+  <div class="container home">
+    <h1 class="text-center title">威胁分析平台</h1>
+    <div class="text-center search">
+      <div class="input-group input-group-lg">
+        <input type="text" class="form-control" placeholder="IP、域名、文件HASH(MD5/SHA1/SHA256)">
+        <div class="input-group-btn">
+          <span class="btn btn-default"><i class="fa fa-upload"></i></span>
+          <span class="btn btn-default btn-info" (click)="doSearch()">分析</span>
+        </div>
       </div>
     </div>
+    <p class="text-center remark">样例： manage-163-account.com 82.165.37.26 DarkHotel 数字签名 文件</p>
+    <p class="text-center source-ip">访问者IP：<a href="javascript:;">58.247.19.61</a></p>
   </div>
-  <p class="text-center remark">样例： manage-163-account.com 82.165.37.26 DarkHotel 数字签名 文件</p>
-  <p class="text-center source-ip">访问者IP：<a href="javascript:;">58.247.19.61</a></p>
-</div>
+</main>
