--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
       <div class="input-group input-group-lg">
         <input type="text" class="form-control" [attr.placeholder]="'search.input' | translate">
         <div class="input-group-btn">
-          <span class="btn btn-default"><i class="fa fa-upload"></i></span>
+          <span class="btn btn-default" placement="bottom" [tooltip]="'header.upload-tooltip' | translate"><i class="fa fa-upload"></i></span>
           <span class="btn btn-default btn-info" (click)="doSearch()">{{'buttons.analyse' | translate}}</span>
         </div>
       </div>
