--- a/src/app/core/header.component.html
+++ b/src/app/core/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-static-top navbar-default" role="banner">
+<div class="navbar navbar-default navbar-fixed-top" role="banner">
   <div class="container">
     <div class="navbar-header">
       <button class="navbar-toggle collapsed" type="button" (click)="isCollapsed = !isCollapsed">
