--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -1,5 +1,5 @@
 <header [showSearchBox]="true" [hideMenu]="true"></header>
-<div class="container" bodyStyle [body-class]="['app-domain']">
+<div class="container main-body" bodyStyle [body-class]="['app-domain']">
   <div class="panel panel-default">
     <div class="panel-heading">www.ncsi.com.cn <small>{{'domain.title' | translate}}</small></div>
     <div class="panel-body">
