--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -20,6 +20,10 @@
                 <td>N/A</td>
               </tr>
               <tr>
+                <th>{{'domain.tags' | translate}}</th>
+                <td><span class="label label-success">白名单</span></td>
+              </tr>
+              <tr>
                 <th>{{'domain.user-marks' | translate}}</th>
                 <td>
                   <span class="label label-default">{{'domain.c2server' | translate:value}}</span>
@@ -32,7 +36,7 @@
           </table>
         </div>
         <div class="col-md-4">
-
+          <canvas gauge [value]="20">gauge</canvas>
         </div>
       </div>
     </div>
