+updated domain page

--- a/src/app/core/footer.component.html
+++ b/src/app/core/footer.component.html
@@ -1,54 +1,54 @@
 <div class="hidden-xs hidden-sm  text-center">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-5">
+      <div class="col-md-6">
         <ul class="list-inline text-left knowmore-list">
           <li>
-            <a href="javascript:;" title="向导" target="_blank">向导</a>
+            <a href="javascript:;" [attr.title]="'footer.guide' | translate" target="_blank">{{'footer.guide' | translate}}</a>
           </li>
           <li>
-            <a href="javascript:;" title="API" target="_blank">API</a>
+            <a href="javascript:;" [attr.title]="'footer.api' | translate" target="_blank">{{'footer.api' | translate}}</a>
           </li>
           <li>
-            <a href="javascript:;" title="关于" target="_blank">关于</a>
+            <a href="javascript:;" [attr.title]="'footer.about' | translate" target="_blank">{{'footer.about' | translate}}</a>
           </li>
           <li>
-            <a href="javascript:;" title="关于" target="_blank">服务条款</a>
+            <a href="javascript:;" [attr.title]="'footer.terms-of-service' | translate" target="_blank">{{'footer.terms-of-service' | translate}}</a>
           </li>
           <li>
-            <a href="javascript:;" title="关于" target="_blank">隐私政策</a>
+            <a href="javascript:;" [attr.title]="'footer.privacy-policy' | translate" target="_blank">{{'footer.privacy-policy' | translate}}</a>
           </li>
           <li>
-            <a href="javascript:;" title="关于" target="_blank">更新日志</a>
+            <a href="javascript:;" [attr.title]="'footer.change-log-partner' | translate" target="_blank">{{'footer.change-log-partner' | translate}}</a>
           </li>
           <li>
-            <a href="javascript:;" title="关于" target="_blank">合作伙伴</a>
+            <a href="javascript:;" [attr.title]="'footer.partner' | translate" target="_blank">{{'footer.partner' | translate}}</a>
           </li>
-        </ul>
+        </ul> 
       </div>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <ul class="list-inline follow-us">
           <li>
-            <a class="follow facebook" target="_blank" href="https://www.facebook.com/ThreatBook-507527639411197"> </a>
+            <a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
           </li>
           <li>
-            <a class="follow linkedin" target="_blank" href="https://www.linkedin.com/company/threatbook?trk=top_nav_home"> </a>
+            <a target="_blank" href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a>
           </li>
           <li>
-            <a class="follow twitter" target="_blank" href="https://twitter.com/@ThreatBookLabs"> </a>
+            <a target="_blank" href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
           </li>
           <li>
-            <a class="follow wechat" href="#" id="wechat_container"> </a>
+            <a href="javascript:;"><i class="fa fa-wechat"></i></a>
           </li>
         </ul>
       </div>
       <div class="col-md-4 text-right">
         <ul class="list-inline contact-us">
           <li>
-            <span class="follow phone"></span>021-12345678
+            <span class="fa fa-phone"></span> 021-12345678
           </li>
           <li>
-            <span class="follow email"></span>nimda_wen@hotmail.com
+            <span class="fa fa-envelope"></span> nimda_wen@hotmail.com
           </li>
         </ul>
       </div>
@@ -56,9 +56,9 @@
         Copyright © Well.CN All Rights Reserved. XICP备XXXXXXX号 Well科技有限公司
       </div>
       <div class="col-md-5 text-right">
-        <div class="btn-group dropup" dropdown>
+        <div class="btn-group dropup" dropdown> 
           <a href="javascript:;" class="dropdown-toggle" dropdownToggle> {{'header.language' | translate}} <span class="caret"></span></a>
-          <ul dropdownMenu class="dropdown-menu " role="menu" aria-labelledby="single-button">
+          <ul dropdownMenu class="dropdown-menu-right" role="menu" aria-labelledby="single-button">
             <li><a href="javascript:;" (click)="setLanguage('zh')">中文</a></li>
             <li><a href="javascript:;" (click)="setLanguage('en')">English</a></li>
           </ul>
