--- a/src/styles/_bootstrap-extend.scss
+++ b/src/styles/_bootstrap-extend.scss
@@ -76,7 +76,7 @@
 }
 
 .nav-tabs > li.nav-item.active {
-  border-top: 2px solid #f3565d;
+  border-top: 2px solid #00a2ca;
 }
 .tab-content {
   margin-bottom: $line-height-computed;
