--- a/src/styles/_bootstrap-extend.scss
+++ b/src/styles/_bootstrap-extend.scss
@@ -87,7 +87,7 @@
   padding: 20px;
   @include box-shadow(0 1px 1px rgba(0,0,0,.05));
   > .tab-pane {
-    > .panel {
+    .panel {
       border: none;
       > .alert {
         margin: 0px;
