+added whois component

--- a/src/app/domain/domain.component.html
+++ b/src/app/domain/domain.component.html
@@ -81,7 +81,7 @@
     </tab>
     <tab>
       <template tabHeading>{{'domain.whois' | translate}}</template>
-      Whois
+      <whois></whois>
     </tab>
     <tab>
       <template tabHeading>{{'domain.certificate' | translate}}</template>
